--- a/plants.html
+++ b/plants.html
@@ -7,7 +7,7 @@
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <a class="navbar-brand" href="#">
-	        <h1>Plants</h1>
+	        Plants
 	      </a>
 	    </div>
 	  </div>
